# hardwaremonitor

./: .gitignore
backend/: .env.example  Makefile  alembic.ini  app.py  asgi.py  config.py  docker-compose.dev.yml  openapi.json  pyproject.toml
backend/api/v1/: router.py
backend/api/v1/endpoints/: agent_data.py  company.py  trigger.py  user.py  websockets.py
backend/api/ws/: __init__.py  websockets.py
backend/core/: mongo_db.py
backend/core/utils/: logger.py
backend/core/utils/services/: broadcast_service.py  zeroconf_service.py
backend/crud/: base.py  company.py  license.py  trigger.py
backend/enums/: common.py
backend/flows/: __main__.py  perfect_api_test.py  sync_agent_data.py  sync_hardware_data.py  test_crud.py  utils.py
backend/migrations/: env.py
backend/models/: __init__.py  agent_trigger.py  company.py  license.py  response.py  user.py
backend/notebooks/: test_crud.ipynb
backend/schemas/: agent_data.py  license.py  trigger.py  user.py
backend/services/: agent_data.py
frontend/: README.md  package-lock.json  package.json  quasar.config.js
